# cppchat

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  项目要求.md
.github/workflows/: cicd.yml
docker/: Dockerfile  Dockerfile.base
docs/: TECH_DOC.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/common/: CMakeLists.txt  protocol.hpp
src/server/: CMakeLists.txt  database.cpp  database.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
tests/: CMakeLists.txt  test_database.cpp  test_protocol.cpp
web/: index.html
